# leis-brasileiras

./: .coverage  .coveragerc  .gitignore  Depara CamaraMunicipalRJ <-> TSE.ipynb  README.md  baixa_cmrj.py  commons.py  create_depara.py  download.py  execute.py  integrate_data.py  leis.py  requirements.txt  setup.cfg  setup.py  urls.py  utils.py  vereador_row_number.py
leis_brasileiras/: integrate_data.py  leis.py  urls.py  utils.py
scripts_auxiliares/: vereador_row_number.py
tests/: fixtures.py  test_utils.py
