[metadata]
name = leis-brasileiras-ministeriopublicorj
version = 0.0.1
author = MinisterioPublicoRJ
description = Pacote para baixar leis brasileiras
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MinisterioPublicoRJ/leis-brasileiras
project_urls =
    Bug Tracker = https://github.com/MinisterioPublicoRJ/leis-brasileiras/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6

[options.packages.find]
where = 